fixed avatar on mobile

--- a/app.css
+++ b/app.css
@@ -75,6 +75,8 @@ header {
 @media (max-width: 869px) {
     header {
         flex-direction: column-reverse;
+    }
+    .headerColumn {
         text-align: center;
     }
 }
